Maybe a fix for horizontal scrolling on iOS?

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
   color: var(--main-text);
   background: var(--main-bg);
   font-family: var(--main-font);
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 ul {
